--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ PROJECT( Observer )
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic" )
 
 ADD_EXECUTABLE( observer_demo
+  Connection.cc
   Demo.cc
   Event.cc
   Subject.cc
