Changed executable name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ PROJECT( Events )
 
 SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic" )
 
-ADD_EXECUTABLE( observer_demo
+ADD_EXECUTABLE( events_demo
   Connection.cc
   Demo.cc
   DemoEvent.cc
